--- a/bootstarp coffeebar.html
+++ b/bootstarp coffeebar.html
@@ -598,7 +598,7 @@ margin-left:2%;
 	<i class="fa fa-map-marker abc"></i>
 	<span class="h3">350 5th Ave, New York, NY 10118</span>
 	<p class="text-center p3">+1 234-567-8900<br> +9 876-543-2100</p>
-	<img src="img3/vecteezy_ai-generated-a-cup-of-coffee-is-poured-on-an-espresso-bar_37337004.jpg" class="img6">
+	<img src="img3/vecteezy_ai-generated-a-cup-of-coffee-is-poured-on-an-espresso-bar_37337004.jpg" class="img-responsive img6">
   </div>
 </div>
 	</div>
@@ -709,7 +709,7 @@ FRESHLY ROASTED COFFEE</h3>
 
 <div class="col-sm-12 col-lg-4 col-md-4">
 <div class="card border border-0 div4">
-<img src="img3/mbr-787x590.jpeg" class="img8">
+<img src="img3/mbr-787x590.jpeg" class="img-responsive img8">
 <h3 class="text-center mt-2 h12">For the cup</h3>
 <p class="text-center p5">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Eaque suscipit, nulla quam. Corporis magni nostrum, inventore tenetur rem!</p>
 </div>
@@ -808,11 +808,11 @@ FRESHLY ROASTED COFFEE</h3>
 </div>
 
 <div class="col-sm-3 col-lg-2 col-md-3">
-<img src="img3/mbr-3-409x273.jpeg" class="img15">
+<img src="img3/mbr-3-409x273.jpeg" class="img-responsive img15">
 </div>
 
 <div class="col-sm-3 col-lg-2 col-md-3">
-<img src="img3/mbr-4-409x273.jpeg" class="img16">
+<img src="img3/mbr-4-409x273.jpeg" class="img-responsive img16">
 </div>
 </div>
 </div>
